added insertHtml and insertMention

--- a/RichEditorView/Assets/editor/style.css
+++ b/RichEditorView/Assets/editor/style.css
@@ -58,6 +58,7 @@ div {
     font-family: 'HelveticaNeue';
     color:#666666;
     font-size: 12pt;
+    line-height: normal !important;
 }
 
 .hashtag {
